# PartyDisplay

./: .gitignore  CLAUDE.md  README.md
.github/: dependabot.yml
.github/workflows/: auto-rebase-prs.yml  codeql.yml  dependabot-auto-merge.yml  release.yml  test.yml  virustotal.yml
app/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/public/: pcm-injector-processor.js  spotify-player.js
app/scripts/: extract-presets.mjs
app/src/: App.tsx  butterchurn.d.ts  spotify-sdk.d.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/party-display-core/: Cargo.toml
app/src-tauri/party-display-core/src/: dlna.rs  dlna_proxy.rs  lib.rs  local_audio.rs  presets.rs  slideshow.rs  smtc.rs  system.rs
app/src-tauri/src/: audio.rs  auth.rs  dlna.rs  dlna_proxy.rs  local_audio.rs  main.rs  media_keys.rs  presets.rs  remote_server.rs  slideshow.rs  smtc.rs  system.rs  window_manager.rs
app/src/__tests__/components/: ClockWeatherWidget.test.tsx  DisplaySettingsPanel.test.tsx  DisplayWindowControls.test.tsx  LyricsOverlay.test.tsx  LyricsSplitPanel.test.tsx  NowPlaying.test.tsx  PlayerControls.test.tsx  SlideshowConfigPanel.test.tsx  SongToast.test.tsx
app/src/__tests__/helpers/: render.tsx  tauri-mock.ts
app/src/__tests__/hooks/: useAuth.test.ts  (+11 more)
app/src/components/: BatteryWidget.tsx  ClientIdSetup.tsx  ClockWeatherWidget.tsx  DisplaySettingsPanel.tsx  DisplayWindowControls.tsx  DlnaBrowser.tsx  FolderPicker.tsx  HelpPanel.tsx  LoginButton.tsx  LyricsOverlay.tsx  LyricsSplitPanel.tsx  NowPlaying.tsx  PlayerControls.tsx  SlideshowConfigPanel.tsx  SlideshowView.tsx  SongToast.tsx  SpectrumCanvas.tsx  VisualizerCanvas.tsx  VolumeToast.tsx  WeatherIcon.tsx
app/src/hooks/: useAuth.ts  useBattery.ts  useBeatScheduler.ts  useDisplaySync.ts  useDisplayWindow.ts  useDlnaBrowser.ts  useExternalPlayer.ts  useFftData.ts  useHotkeys.ts  useLocalPlayer.ts  useLyrics.ts  usePhotoLibrary.ts  useSpotifyPlayer.ts  useVisualizer.ts  useWeather.ts
app/src/lib/: audio-analysis.ts  ipc.ts  player-types.ts  spotify-auth.ts  storage-keys.ts  utils.ts
docs/: architectural-todos.md
docs/docs for release/: README.txt  RELEASE_GUIDELINES.md  VERSION_BUMP.md
docs/superpowers/plans/: 2026-03-22-party-display-implementation.md  2026-03-22-tauri-spike.md  2026-03-28-plan1-foundation-auth.md  2026-03-28-plan2-playback-spectrum.md  2026-03-28-plan3-slideshow-beat-sync.md  2026-03-29-photo-counter-overlay.md  2026-03-29-slideshow-display-settings.md  2026-03-30-clock-weather-widget.md  2026-03-31-lyrics-overlay.md  2026-04-11-local-audio-source.md  2026-04-12-music-playback-always-visible.md  2026-04-13-butterchurn-visualizer.md  2026-04-23-smtc-external-player.md  2026-04-24-testing-strategy.md  2026-04-27-rust-test-speed.md
docs/superpowers/specs/: 2026-03-21-party-display-design.md  2026-03-21-party-display-implementation-design.md  2026-03-29-photo-counter-overlay-design.md  2026-03-29-slideshow-display-settings-design.md  2026-03-30-clock-weather-widget-design.md  2026-04-11-local-audio-source-design.md  2026-04-12-dlna-source-design.md  2026-04-12-music-playback-always-visible-design.md  2026-04-13-butterchurn-visualizer-design.md  2026-04-18-remote-control-design.md  2026-04-23-smtc-external-player-design.md  2026-04-24-testing-strategy-design.md  2026-04-27-rust-test-speed-design.md
docs/testing/: release-checklist.md
remote/: index.html
spike/: .gitignore  index.html  main.mjs  notes.md  package-lock.json  package.json  server.mjs
spike-tauri/: .gitignore  notes.md  package-lock.json  package.json
spike-tauri/public/: index.html
spike-tauri/src-tauri/: Cargo.toml  tauri.conf.json
spike-tauri/src-tauri/src/: main.rs
(+4 files in other folders)
