[package]
name = "party-display"
version = "0.9.7"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-deep-link        = "2"
tauri-plugin-shell            = "2"
tauri-plugin-single-instance  = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
keyring    = { version = "3", features = ["windows-native"] }
cpal       = "0.15"
notify     = "6"
tauri-plugin-dialog = "2"
reqwest             = { version = "0.12", features = ["json", "stream"] }
rupnp               = "3"
roxmltree           = "0.20"
futures             = "0.3"
tokio               = { version = "1", features = ["time", "net", "io-util", "sync"] }
axum               = { version = "0.7", features = ["ws"] }
local-ip-address   = "0.6"
enigo = "0.6.1"

