[workspace]
members = [".", "party-display-core"]
resolver = "2"

[package]
name = "party-display"
version = "0.9.10"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-deep-link        = "2"
tauri-plugin-shell            = "2"
tauri-plugin-single-instance  = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
keyring    = { version = "3", features = ["windows-native"] }
cpal       = "0.15"
notify     = "6"
tauri-plugin-dialog = "2"
reqwest             = { version = "0.12", features = ["json", "stream"] }
rupnp               = "1"
roxmltree           = "0.20"
futures             = "0.3"
tokio               = { version = "1", features = ["time", "net", "io-util", "sync"] }
axum               = { version = "0.7", features = ["ws"] }
local-ip-address   = "0.6"
enigo = "0.6.1"
windows = { version = "0.61", features = [
  "Media_Control",
  "Storage_Streams",
  "Foundation",
  "Win32_System_Com",
] }
base64 = "0.22"
party-display-core = { path = "party-display-core" }

[profile.test]
opt-level = 0
debug = 0
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
