[package]
name = "party-display-spike"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri    = { version = "2", features = ["devtools"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
cpal     = "0.15"
rustfft  = "6"
