[package]
name = "party-display-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree  = "0.20"
reqwest    = { version = "0.13", features = ["json", "stream"] }
tokio      = { version = "1", features = ["net", "io-util"] }
futures    = "0.3"
